--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Notion Liquid Glass Countdown</title>
+  <title>Mini Liquid Glass Countdown</title>
 
-  <!-- Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -19,28 +18,36 @@
 
       <header class="top">
         <div class="badge" id="badge">TOPIK</div>
-        <div class="meta" id="meta">Until</div>
+        <div class="date" id="dateText">—</div>
       </header>
 
-      <div class="headline">
-        <h1 class="title" id="title">TOPIK I</h1>
-        <div class="date" id="dateText">—</div>
+      <!-- Optional title (hidden by default, can be enabled via URL title=...) -->
+      <div class="title" id="title" style="display:none;"></div>
+
+      <div class="grid" aria-label="Countdown values">
+        <div class="cell">
+          <div class="num" id="months">00</div>
+          <div class="lab">Months</div>
+        </div>
+        <div class="cell">
+          <div class="num" id="daysTotal">00</div>
+          <div class="lab">Days</div>
+        </div>
+        <div class="cell">
+          <div class="num" id="hours">00</div>
+          <div class="lab">Hours</div>
+        </div>
+        <div class="cell">
+          <div class="num" id="minutes">00</div>
+          <div class="lab">Minutes</div>
+        </div>
+        <div class="cell">
+          <div class="num" id="seconds">00</div>
+          <div class="lab">Seconds</div>
+        </div>
       </div>
 
-      <div class="sub" id="subline">Loading…</div>
-
-      <div class="grid">
-        <div class="cell"><div class="num" id="months">00</div><div class="lab">Months</div></div>
-        <div class="cell"><div class="num" id="weeks">00</div><div class="lab">Weeks</div></div>
-        <div class="cell"><div class="num" id="days">00</div><div class="lab">Days</div></div>
-        <div class="cell"><div class="num" id="hours">00</div><div class="lab">Hours</div></div>
-        <div class="cell"><div class="num" id="minutes">00</div><div class="lab">Minutes</div></div>
-        <div class="cell"><div class="num" id="seconds">00</div><div class="lab">Seconds</div></div>
-      </div>
-
-      <footer class="bottom">
-        <div class="pill" id="tzLabel">TZ: Europe/Berlin</div>
-      </footer>
+      <div class="hint" id="hint" style="display:none;"></div>
     </section>
   </main>
 
